css changes to zts-main site

--- a/wp-content/themes/zts-india/assets/css/main.css
+++ b/wp-content/themes/zts-india/assets/css/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /*********************
 Consistent Font Sizes
 *********************/
@@ -8859,7 +8860,8 @@ ul {
     -webkit-transform: translateY(0);
             transform: translateY(0); } }
 
-.btn {
+.btn,
+.btn-menu-red > a {
   display: inline-block;
   text-align: center;
   padding: 8px 40px;
@@ -8878,45 +8880,59 @@ ul {
   transition: all 0.4s ease;
   border: 1px solid transparent; }
   @media (prefers-reduced-motion: reduce) {
-    .btn {
+    .btn,
+    .btn-menu-red > a {
       -webkit-transition: none;
       transition: none; } }
-  .btn.btn-2x {
+  .btn.btn-2x,
+  .btn-menu-red > a.btn-2x {
     padding: 15px 40px;
     font-size: 16px; }
-  .btn.btn-red {
+  .btn.btn-red,
+  .btn-menu-red > a.btn-red {
     background: #be1310;
     color: #ffffff; }
-    .btn.btn-red:hover {
+    .btn.btn-red:hover,
+    .btn-menu-red > a.btn-red:hover {
       background: #002a52; }
-  .btn.btn-purple {
+  .btn.btn-purple,
+  .btn-menu-red > a.btn-purple {
     background: #2e005a;
     color: #ffffff; }
-    .btn.btn-purple:hover {
+    .btn.btn-purple:hover,
+    .btn-menu-red > a.btn-purple:hover {
       background: #131313; }
-  .btn.btn-white {
+  .btn.btn-white,
+  .btn-menu-red > a.btn-white {
     background: #ffffff;
     color: #131313; }
-    .btn.btn-white:hover {
+    .btn.btn-white:hover,
+    .btn-menu-red > a.btn-white:hover {
       color: #ffffff; }
-  .btn.btn-white-outline {
+  .btn.btn-white-outline,
+  .btn-menu-red > a.btn-white-outline {
     background: transparent;
     border: 2px solid #ffffff;
     color: #ffffff; }
-    .btn.btn-white-outline:after {
+    .btn.btn-white-outline:after,
+    .btn-menu-red > a.btn-white-outline:after {
       content: none; }
-    .btn.btn-white-outline:hover {
+    .btn.btn-white-outline:hover,
+    .btn-menu-red > a.btn-white-outline:hover {
       color: #002a52;
       background: #ffffff; }
-  .btn.btn-red-outline {
+  .btn.btn-red-outline,
+  .btn-menu-red > a.btn-red-outline {
     background: transparent;
     color: #002a52;
     border: 1px solid #002a52; }
-    .btn.btn-red-outline:hover {
+    .btn.btn-red-outline:hover,
+    .btn-menu-red > a.btn-red-outline:hover {
       background: #be1310;
       color: #ffffff;
       border-color: #be1310; }
-  .btn.btn-link {
+  .btn.btn-link,
+  .btn-menu-red > a.btn-link {
     min-width: unset;
     min-height: unset;
     padding: 0;
@@ -8929,7 +8945,8 @@ ul {
     border-radius: 0;
     position: relative;
     overflow: unset; }
-    .btn.btn-link:before {
+    .btn.btn-link:before,
+    .btn-menu-red > a.btn-link:before {
       content: '';
       height: 2px;
       width: 100%;
@@ -8940,15 +8957,28 @@ ul {
       -webkit-transition: 0.4s;
       transition: 0.4s; }
       @media (prefers-reduced-motion: reduce) {
-        .btn.btn-link:before {
+        .btn.btn-link:before,
+        .btn-menu-red > a.btn-link:before {
           -webkit-transition: none;
           transition: none; } }
-    .btn.btn-link:after {
+    .btn.btn-link:after,
+    .btn-menu-red > a.btn-link:after {
       content: none; }
-    .btn.btn-link:hover {
+    .btn.btn-link:hover,
+    .btn-menu-red > a.btn-link:hover {
       color: #767676; }
-      .btn.btn-link:hover:before {
+      .btn.btn-link:hover:before,
+      .btn-menu-red > a.btn-link:hover:before {
         background: #767676; }
+
+.btn-menu-red > a {
+  background: #be1310;
+  color: #ffffff !important;
+  font-size: 14px !important;
+  font-weight: 700 !important;
+  padding: 10px 20px; }
+  .btn-menu-red > a:hover {
+    background: #002a52; }
 
 input, select, textarea, .form-control {
   width: 100%;
@@ -9081,12 +9111,9 @@ form.wpcf7-form.sent .wpcf7-response-output {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    /* Large Devices, Wide Screens */ }
-    @media (max-width: 991px) {
-      .topbar .content-left ul {
-        -webkit-box-pack: center;
-            -ms-flex-pack: center;
-                justify-content: center; } }
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center; }
     .topbar .content-left ul li {
       list-style: none;
       color: #ffffff; }
@@ -9229,6 +9256,7 @@ form.wpcf7-form.sent .wpcf7-response-output {
           max-width: unset;
           display: block; } }
     .site-header .header-wrapper .header-right {
+      display: none;
       /* Large Devices, Wide Screens */ }
       @media (max-width: 991px) {
         .site-header .header-wrapper .header-right {
@@ -9932,6 +9960,9 @@ body.body-search-overlay .search-overlay {
     display: flex;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     /* Large Devices, Wide Screens */ }
     @media (max-width: 991px) {
       .main-navigation .menu {
@@ -9986,6 +10017,259 @@ body.body-search-overlay .search-overlay {
         color: #be1310; }
       .main-navigation .menu li.current-menu-item > a {
         font-weight: 600; }
+    .main-navigation .menu > li.menu-item-has-children > .sub-menu {
+      display: block;
+      text-align: left;
+      margin: 0;
+      width: 240px;
+      border-radius: 12px;
+      -webkit-box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+              box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+      background: #ffffff;
+      z-index: 5;
+      padding: 27px 22px 27px 32px;
+      -webkit-transition: 0.4s;
+      transition: 0.4s;
+      /* Large Devices, Wide Screens */ }
+      @media (prefers-reduced-motion: reduce) {
+        .main-navigation .menu > li.menu-item-has-children > .sub-menu {
+          -webkit-transition: none;
+          transition: none; } }
+      @media screen and (min-width: 1200px) {
+        .main-navigation .menu > li.menu-item-has-children > .sub-menu {
+          position: absolute;
+          opacity: 0;
+          pointer-events: none;
+          top: calc(100% + 14px);
+          left: -2px; } }
+      @media (max-width: 1199px) {
+        .main-navigation .menu > li.menu-item-has-children > .sub-menu {
+          opacity: 1;
+          width: 100%;
+          display: none;
+          border-radius: 0;
+          padding: 0;
+          -webkit-transform: none;
+                  transform: none;
+          background: #767676;
+          -webkit-box-shadow: unset;
+                  box-shadow: unset; } }
+      .main-navigation .menu > li.menu-item-has-children > .sub-menu.sub-menu-open {
+        display: block; }
+      .main-navigation .menu > li.menu-item-has-children > .sub-menu li {
+        width: 100%;
+        margin: 0 0 12px;
+        /* Large Devices, Wide Screens */ }
+        @media (max-width: 1199px) {
+          .main-navigation .menu > li.menu-item-has-children > .sub-menu li {
+            margin: 0;
+            border-bottom: 1px solid rgba(0, 0, 0, 0.1); } }
+        .main-navigation .menu > li.menu-item-has-children > .sub-menu li:last-child {
+          margin: 0;
+          /* Large Devices, Wide Screens */ }
+          @media (max-width: 1199px) {
+            .main-navigation .menu > li.menu-item-has-children > .sub-menu li:last-child {
+              border-bottom: 0; } }
+        .main-navigation .menu > li.menu-item-has-children > .sub-menu li a {
+          color: #131313;
+          display: block;
+          width: 100%;
+          font-size: 16px;
+          text-transform: uppercase;
+          /* Large Devices, Wide Screens */
+          /* Large Devices, Wide Screens */
+          /* Large Devices, Wide Screens */ }
+          @media (max-width: 1199px) {
+            .main-navigation .menu > li.menu-item-has-children > .sub-menu li a {
+              padding: 12px 30px; } }
+          @media (max-width: 767px) {
+            .main-navigation .menu > li.menu-item-has-children > .sub-menu li a {
+              padding: 12px 20px;
+              font-size: 15px; } }
+          @media (max-width: 374px) {
+            .main-navigation .menu > li.menu-item-has-children > .sub-menu li a {
+              padding: 10px 15px; } }
+        .main-navigation .menu > li.menu-item-has-children > .sub-menu li:hover > a {
+          color: #be1310; }
+    @media screen and (min-width: 1200px) {
+      .main-navigation .menu > li.menu-item-has-children:hover > .sub-menu {
+        opacity: 1;
+        visibility: visible;
+        pointer-events: all; } }
+    .main-navigation .menu li.menu-item-has-children {
+      position: relative;
+      /* mega-menu */ }
+      .main-navigation .menu li.menu-item-has-children:after {
+        content: '';
+        position: absolute;
+        top: calc(100% - 1px);
+        width: 100%;
+        background: transparent;
+        left: 0;
+        height: 12px; }
+      .main-navigation .menu li.menu-item-has-children.mega-menu li a:after {
+        content: none !important; }
+      .main-navigation .menu li.menu-item-has-children.mega-menu .sub-menu li:hover > a:after {
+        background-image: none; }
+      .main-navigation .menu li.menu-item-has-children.mega-menu > .sub-menu {
+        /* Large Devices, Wide Screens */
+        /* Large Devices, Wide Screens */
+        /* Large Devices, Wide Screens */ }
+        @media screen and (max-width: 1299px) and (min-width: 1200px) {
+          .main-navigation .menu li.menu-item-has-children.mega-menu > .sub-menu {
+            left: 100% !important; } }
+        @media screen and (min-width: 1200px) {
+          .main-navigation .menu li.menu-item-has-children.mega-menu > .sub-menu {
+            display: -webkit-box;
+            display: -ms-flexbox;
+            display: flex;
+            -ms-flex-wrap: wrap;
+                flex-wrap: wrap;
+            width: 1050px;
+            left: 50%;
+            top: calc(100% + 10px);
+            -webkit-transform: translateX(-40%);
+                    transform: translateX(-40%);
+            padding: 28px 15px 08px 28px;
+            opacity: 0;
+            visibility: hidden;
+            pointer-events: none;
+            max-height: 520px;
+            overflow: auto; } }
+        @media (max-width: 1199px) {
+          .main-navigation .menu li.menu-item-has-children.mega-menu > .sub-menu {
+            padding: 18px 30px; } }
+        @media (max-width: 767px) {
+          .main-navigation .menu li.menu-item-has-children.mega-menu > .sub-menu {
+            padding: 15px 20px; } }
+        @media (max-width: 374px) {
+          .main-navigation .menu li.menu-item-has-children.mega-menu > .sub-menu {
+            padding: 10px 15px; } }
+        .main-navigation .menu li.menu-item-has-children.mega-menu > .sub-menu > li {
+          margin: 0 0 30px;
+          -webkit-box-flex: 0;
+              -ms-flex: 0 0 33.33%;
+                  flex: 0 0 33.33%;
+          max-width: 33.33%;
+          padding-right: 20px;
+          /* Large Devices, Wide Screens */ }
+          @media (max-width: 1199px) {
+            .main-navigation .menu li.menu-item-has-children.mega-menu > .sub-menu > li {
+              padding-bottom: 15px;
+              margin: 0 0 20px; } }
+          .main-navigation .menu li.menu-item-has-children.mega-menu > .sub-menu > li:last-child {
+            /* Large Devices, Wide Screens */ }
+            @media (max-width: 1199px) {
+              .main-navigation .menu li.menu-item-has-children.mega-menu > .sub-menu > li:last-child {
+                margin: 0; } }
+          .main-navigation .menu li.menu-item-has-children.mega-menu > .sub-menu > li > a {
+            font-size: 18px;
+            text-transform: none;
+            font-weight: 700;
+            /* Large Devices, Wide Screens */ }
+            @media (max-width: 1199px) {
+              .main-navigation .menu li.menu-item-has-children.mega-menu > .sub-menu > li > a {
+                padding: 0; } }
+        .main-navigation .menu li.menu-item-has-children.mega-menu > .sub-menu .sub-menu {
+          -webkit-box-shadow: unset;
+                  box-shadow: unset;
+          position: static;
+          padding: 15px 0 0;
+          opacity: 1;
+          visibility: visible; }
+          .main-navigation .menu li.menu-item-has-children.mega-menu > .sub-menu .sub-menu li {
+            margin: 0 0 8px;
+            /* Large Devices, Wide Screens */ }
+            @media (max-width: 1199px) {
+              .main-navigation .menu li.menu-item-has-children.mega-menu > .sub-menu .sub-menu li {
+                border-bottom: 0;
+                margin: 0 0 7px; } }
+            .main-navigation .menu li.menu-item-has-children.mega-menu > .sub-menu .sub-menu li a {
+              text-transform: none;
+              position: relative;
+              -webkit-transition: 0.4s;
+              transition: 0.4s;
+              /* Large Devices, Wide Screens */ }
+              @media (prefers-reduced-motion: reduce) {
+                .main-navigation .menu li.menu-item-has-children.mega-menu > .sub-menu .sub-menu li a {
+                  -webkit-transition: none;
+                  transition: none; } }
+              @media screen and (min-width: 1200px) {
+                .main-navigation .menu li.menu-item-has-children.mega-menu > .sub-menu .sub-menu li a {
+                  padding-left: 0px; } }
+              @media (max-width: 1199px) {
+                .main-navigation .menu li.menu-item-has-children.mega-menu > .sub-menu .sub-menu li a {
+                  padding: 0; } }
+              @media screen and (min-width: 1200px) {
+                .main-navigation .menu li.menu-item-has-children.mega-menu > .sub-menu .sub-menu li a:before {
+                  content: '»';
+                  font-size: 18px;
+                  position: absolute;
+                  top: -5px;
+                  left: 0;
+                  color: #be1310;
+                  font-weight: 600;
+                  -webkit-transition: 0.4s;
+                  transition: 0.4s;
+                  -webkit-transition-delay: 0.2s;
+                          transition-delay: 0.2s;
+                  opacity: 0; } }
+  @media screen and (min-width: 1200px) and (prefers-reduced-motion: reduce) {
+    .main-navigation .menu li.menu-item-has-children.mega-menu > .sub-menu .sub-menu li a:before {
+      -webkit-transition: none;
+      transition: none; } }
+            .main-navigation .menu li.menu-item-has-children.mega-menu > .sub-menu .sub-menu li.view-all-services {
+              padding-top: 10px; }
+              .main-navigation .menu li.menu-item-has-children.mega-menu > .sub-menu .sub-menu li.view-all-services a {
+                display: inline-block;
+                width: auto;
+                text-transform: uppercase;
+                font-size: 15px;
+                font-weight: 500; }
+                .main-navigation .menu li.menu-item-has-children.mega-menu > .sub-menu .sub-menu li.view-all-services a:before {
+                  content: none; }
+                @media screen and (min-width: 1200px) {
+                  .main-navigation .menu li.menu-item-has-children.mega-menu > .sub-menu .sub-menu li.view-all-services a {
+                    padding-left: 0 !important;
+                    padding-right: 22px; } }
+                .main-navigation .menu li.menu-item-has-children.mega-menu > .sub-menu .sub-menu li.view-all-services a:after {
+                  position: absolute;
+                  top: 4px;
+                  right: 0;
+                  height: 10px;
+                  width: 16px;
+                  background-image: url("../../images/arrow-right-black.svg");
+                  background-size: contain;
+                  background-repeat: no-repeat;
+                  -webkit-transition: 0.4s;
+                  transition: 0.4s; }
+                  @media screen and (min-width: 1200px) {
+                    .main-navigation .menu li.menu-item-has-children.mega-menu > .sub-menu .sub-menu li.view-all-services a:after {
+                      content: '' !important; } }
+                  @media (prefers-reduced-motion: reduce) {
+                    .main-navigation .menu li.menu-item-has-children.mega-menu > .sub-menu .sub-menu li.view-all-services a:after {
+                      -webkit-transition: none;
+                      transition: none; } }
+                  @media not all and (min-resolution: 0.001dpcm) {
+                    @supports (-webkit-appearance: none) {
+                      .main-navigation .menu li.menu-item-has-children.mega-menu > .sub-menu .sub-menu li.view-all-services a:after {
+                        -webkit-transition: 0s;
+                        transition: 0s; }
+                        @media (prefers-reduced-motion: reduce) {
+                          .main-navigation .menu li.menu-item-has-children.mega-menu > .sub-menu .sub-menu li.view-all-services a:after {
+                            -webkit-transition: none;
+                            transition: none; } } } }
+                .main-navigation .menu li.menu-item-has-children.mega-menu > .sub-menu .sub-menu li.view-all-services a:hover:after {
+                  background-image: url("../../images/arrow-right-red.svg"); }
+            @media screen and (min-width: 1200px) {
+              .main-navigation .menu li.menu-item-has-children.mega-menu > .sub-menu .sub-menu li:hover a {
+                padding-left: 15px; }
+                .main-navigation .menu li.menu-item-has-children.mega-menu > .sub-menu .sub-menu li:hover a:before {
+                  opacity: 1; } }
+      .main-navigation .menu li.menu-item-has-children.mega-menu:hover > .sub-menu {
+        opacity: 1;
+        visibility: visible;
+        pointer-events: all; }
 
 body.single-services .main-navigation .menu li.menu-services > a {
   color: #be1310;
