--- a/wp-content/themes/zts-india/resources/scss/main.scss
+++ b/wp-content/themes/zts-india/resources/scss/main.scss
@@ -34,6 +34,7 @@
 @import "pages/services";
 @import "pages/contact";
 @import "pages/portfolio";
+@import "pages/careers";
 @import "pages/default";
 
 
