--- a/wp-content/themes/zts-india/resources/scss/pages/_homepage.scss
+++ b/wp-content/themes/zts-india/resources/scss/pages/_homepage.scss
@@ -453,11 +453,13 @@
 		}
 	}
 }
+
 body.home {
 	.service-cat-section {
 		padding: 60px 0 30px;
 	}
 }
+
 .service-cat-section {
 	padding-bottom: 40px;
 
@@ -1131,50 +1133,6 @@ body.home {
 				padding-bottom: 30px;
 			}
 
-			.testimonial-block {
-				position: relative;
-				display: block;
-
-				.content {
-					padding-top: 30px;
-
-					p {
-						font-size: 26px;
-						color: $navy_blue;
-						font-weight: 400;
-						line-height: 1.77;
-						margin: 0;
-
-						@include breakpoint(small) {
-							font-size: 22px;
-						}
-
-						@include breakpoint(extrasmall) {
-							font-size: 18px;
-						}
-					}
-				}
-
-				.client-info {
-					padding-top: 35px;
-
-					@include breakpoint(medium) {
-						max-width: 80%;
-					}
-
-					h4 {
-						color: $red;
-						margin: 0;
-						font-weight: 700;
-					}
-
-					span {
-						font-weight: 500;
-						color: $color_text;
-						display: block;
-					}
-				}
-			}
 		}
 
 		.slick-dots {
@@ -1323,6 +1281,7 @@ body.home {
 	.section-title {
 		margin: 0 auto 20px;
 	}
+
 	.row {
 		margin: 0;
 		align-self: center;
@@ -1560,53 +1519,80 @@ body.home {
 
 				input {
 
-					&:not([type=submit]),
-					{
-					background: transparent;
-				}
-			}
-
-			select,
-			textarea {
-				background: transparent;
-			}
-
-			select {
-				background-image: url('../../images/arrow-down-white.svg');
-				background-size: 20px;
-				background-position: calc(100% - 10px) 50%;
-				background-repeat: no-repeat;
-
-				option {
-					color: $color_text;
-				}
-			}
-
-			.input-submit {
-				padding-top: 15px;
-
-				input {
-					background: $white;
-					border-radius: 3px;
-					color: $red;
-					font-size: 16px;
-					height: auto;
-					padding: 10px 30px;
-					font-family: $font_rubik;
-					font-weight: 500;
-
-					&:hover {
-						background: $navy_blue;
-						border-color: $navy_blue;
-						color: $white;
+					&:not([type=submit]) {
+						background: transparent;
 					}
 				}
-			}
 
-			.wpcf7-not-valid-tip {
-				color: $purple;
+				select,
+				textarea {
+					background: transparent;
+				}
+
+				select {
+					background-image: url('../../images/arrow-down-white.svg');
+					background-size: 20px;
+					background-position: calc(100% - 10px) 50%;
+					background-repeat: no-repeat;
+
+					option {
+						color: $color_text;
+					}
+				}
+
+				.input-submit {
+					padding-top: 15px;
+
+					input {
+						background: $white;
+						border-radius: 3px;
+						color: $red;
+						font-size: 16px;
+						height: auto;
+						padding: 10px 30px;
+						font-family: $font_rubik;
+						font-weight: 500;
+
+						&:hover {
+							background: $navy_blue;
+							border-color: $navy_blue;
+							color: $white;
+						}
+					}
+				}
+
+				.wpcf7-not-valid-tip {
+					color: $purple;
+				}
 			}
 		}
 	}
 }
+
+.section-all-testimonials {
+	.row {
+		.col-12 {			
+			&:not(:last-child) {
+				.testimonial-block {
+					border-bottom: 1px solid rgba($dark_grey, 0.2);
+					margin-bottom: 40px;
+				}
+			}
+			.testimonial-block {
+				padding-bottom: 40px;
+				.content {
+					padding-top: 0;
+					p {
+						@media screen and (min-width: 1200px) {
+							line-height: 1.5;
+							font-size: 24px;
+						}
+					}
+				}
+				.client-info {
+					padding-top: 20px;
+				}
+			}
+		}
+	}
 }
